Fix z-index

--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,7 @@
       height: 100%;
       position: absolute;
       width: 15%;
-      z-index: 200;
+      z-index: 40;
     }
     .slider::before{
       left: 0;
